refactor(flight): replace Collectors.toList() with List.toList() for improved readability